--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@ body,
 html,
 input {
   font-family: 'Roboto Mono', monospace;
+  box-sizing: border-box;
 }
 
 body,
@@ -14,4 +15,7 @@ html {
 
 ::placeholder {
   background-color: white;
+}
+
+@media only screen and (max-width: 600px) {
 }
