--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,5 +17,15 @@ html {
   background-color: white;
 }
 
-@media only screen and (max-width: 600px) {
+.forms {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  flex-direction: row;
+}
+
+@media (max-width: 700px) {
+  .forms {
+    flex-direction: column;
+  }
 }
